--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
   "packageManager": "pnpm@10.29.3",
   "dependencies": {
     "@better-auth/drizzle-adapter": "1.5.0-beta.9",
+    "@tiptap/extension-image": "^3.19.0",
+    "@tiptap/extension-link": "^3.19.0",
+    "@tiptap/extension-placeholder": "^3.19.0",
+    "@tiptap/react": "^3.19.0",
+    "@tiptap/starter-kit": "^3.19.0",
     "@types/node": "^25.2.3",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
