--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postgres": "^3.4.8",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
+    "redis": "^5.10.0",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
